updates updates updates

--- a/public/index.html
+++ b/public/index.html
@@ -248,31 +248,74 @@ table tbody tr:nth-child(odd){
         </div>
         <div class = "left">
           <style>
-
 .column {
   float: left;
   width: 50%;
 }
 </style> 
-  <div class = "column">
-<h2>Lectures </h2>
-<p><font color="#339898"><i class="fas fa-calendar"></i></font> Mon and Wed 3:30p - 4:45p</p>
-<h3 id="labs">Labs</h3>
-<p>Lab 01   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 8:30a - 9:45a</p>
-<p>Lab 02   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 12p - 1:15p</p>
-<p>Lab 03   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Thu 5:15p - 6:30p</p>
-<p>Lab 04   <i class="fas fa-calendar" style = "color: #339898"></i></font>   Asynchronous</p>
-</div> 
 <div class = "column">
-<h2 id="instructor">Instructor</h2>
-<p><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a>   <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</p>
-<h2 id="teaching-assistants">Teaching Assistants</h2>
-<ul>
-<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
-<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
-<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
-<li><i class="fas fa-user" style = "color: #339898"></i> <a href="mailto:maria.tackett@duke.edu" title="email"> Prof. Maria  Tackett</a> &nbsp; <i class="fas fa-calendar-check" style = "color: #339898"></i> Mon 2p - 3:3p</li>
-</ul>
+<table>
+<thead>
+  <tr>
+    <th class="tg-0pky">Instructor</th>
+    <th class="tg-0pky">Maria Tackett</th>
+    <th class="tg-0pky">Email</th>
+    <th class="tg-0pky">Office hours</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 1</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office Hours</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 2</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office Hours</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 3</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office hours</td>
+  </tr>
+</tbody>
+</table>
+</div>
+<div class = "column">
+<table>
+<thead>
+  <tr>
+    <th class="tg-0pky">Instructor</th>
+    <th class="tg-0pky">Maria Tackett</th>
+    <th class="tg-0pky">Email</th>
+    <th class="tg-0pky">Office hours</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 1</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office Hours</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 2</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office Hours</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">TA</td>
+    <td class="tg-0pky">TA 3</td>
+    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky">Office hours</td>
+  </tr>
+</tbody>
+</table>
 </div>
 
         </div>
@@ -283,8 +326,8 @@ table tbody tr:nth-child(odd){
 
 
 <div class="event">
-  <div class="eventTitle"><a href="/help/"><i class="far fa-lightbulb"></i>&nbsp;&nbsp;Sticky 4</a></div>
-  <div class="eventDetails">This is where you can get help!</div>
+  <div class="eventTitle"><a href="https://sakai.duke.edu"><i class="far fa-laptop"></i>&nbsp;&nbsp;Join on Zoom!</a></div>
+  <div class="eventDetails">Join all live lectures, labs, and office hours using the Zoom links in <a href="https://sakai.duke.edu">Sakai</a>.</div>
 </div>
 
 
