fix homepage formatting

--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -226,8 +226,10 @@ table tbody tr:nth-child(odd){
       <div class="article-content">
       <style>
 .column {
-  float: left;
   width: 50%;
+  display: inline-block;
+  position: relative;
+  padding-right: 20px;
 }
 </style> 
 <div class = "column">
@@ -269,7 +271,6 @@ table tbody tr:nth-child(odd){
     <th class="tg-0pky">Instructor</th>
     <th class="tg-0pky">Maria Tackett</th>
     <th class="tg-0pky">Email</th>
-    <th class="tg-0pky">Office hours</th>
   </tr>
 </thead>
 <tbody>
@@ -277,19 +278,16 @@ table tbody tr:nth-child(odd){
     <td class="tg-0pky">TA</td>
     <td class="tg-0pky">TA 1</td>
     <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office Hours</td>
   </tr>
   <tr>
     <td class="tg-0pky">TA</td>
     <td class="tg-0pky">TA 2</td>
     <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office Hours</td>
   </tr>
   <tr>
     <td class="tg-0pky">TA</td>
     <td class="tg-0pky">TA 3</td>
     <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office hours</td>
   </tr>
 </tbody>
 </table>
