getting close for homepage!

--- a/public/home/band_two/index.html
+++ b/public/home/band_two/index.html
@@ -225,69 +225,44 @@ table tbody tr:nth-child(odd){
 
       <div class="article-content">
       <style>
-.column {
-  width: 50%;
-  display: inline-block;
-  position: relative;
-  padding-right: 20px;
-}
-</style> 
+  .column {
+  width: 100%;
+  }
+
+  table {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 400;
+  }
+  
+</style>
 <div class = "column">
 <table>
-<thead>
-  <tr>
-    <th class="tg-0pky">Instructor</th>
-    <th class="tg-0pky">Maria Tackett</th>
-    <th class="tg-0pky">Email</th>
-    <th class="tg-0pky">Office hours</th>
-  </tr>
-</thead>
 <tbody>
   <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 1</td>
-    <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office Hours</td>
+    <td class="tg-0pky">Lecture</td>
+    <td class="tg-0pky">All Students</td>
+    <td class="tg-0pky">Mon and Wed 3:30p - 4:45p</td>
   </tr>
   <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 2</td>
-    <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office Hours</td>
+    <td class="tg-0pky">Labs</td>
+    <td class="tg-0pky">Lab 01</td>
+    <td class="tg-0pky">Thu 8:30a - 9:45a</td>
   </tr>
   <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 3</td>
-    <td class="tg-0pky">Email</td>
-    <td class="tg-0pky">Office hours</td>
-  </tr>
-</tbody>
-</table>
-</div>
-<div class = "column">
-<table>
-<thead>
-  <tr>
-    <th class="tg-0pky">Instructor</th>
-    <th class="tg-0pky">Maria Tackett</th>
-    <th class="tg-0pky">Email</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 1</td>
-    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 02</td>
+    <td class="tg-0pky">Thu 12p - 1:15p</td>
   </tr>
   <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 2</td>
-    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 03</td>
+    <td class="tg-0pky">Thu 5:15p - 6:30p</td>
   </tr>
   <tr>
-    <td class="tg-0pky">TA</td>
-    <td class="tg-0pky">TA 3</td>
-    <td class="tg-0pky">Email</td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 04</td>
+    <td class="tg-0pky">Asynchronous</td>
   </tr>
 </tbody>
 </table>
