--- a/public/home/index.html
+++ b/public/home/index.html
@@ -304,7 +304,7 @@ table tbody tr:nth-child(odd){
             <div class="itemDetails">
               <div class="itemHeader">
 
-                <div class="itemTitle"><a href="/home/band_three/">Teaching Team and office hours</a>
+                <div class="itemTitle"><a href="/home/band_three/">Teaching team and office hours</a>
                 </div>
                 
               </div>
