formatting is almost there!

--- a/public/index.html
+++ b/public/index.html
@@ -318,10 +318,97 @@ table tbody tr:nth-child(odd){
       </div>
     </div> 
   </div> 
+  
 
+
+
+
+
+  <div class="band third">
+    <div class="bandContent">
+      <div class="blurb">
+        <div class="tagline">
+          Teaching team and office hours
+        </div>
+        <div>
+          <style>
+  .column {
+  width: 100%;
+  }
+
+  table {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 400;
+  
+  }
+  
+</style>
+<div class = "column">
+<table>
+<tbody>
+  <tr>
+    <td class="tg-0pky">Lecture</td>
+    <td class="tg-0pky">All Students</td>
+    <td class="tg-0pky">Mon and Wed 3:30p - 4:45p</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Labs</td>
+    <td class="tg-0pky">Lab 01</td>
+    <td class="tg-0pky">Thu 8:30a - 9:45a</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 02</td>
+    <td class="tg-0pky">Thu 12p - 1:15p</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 03</td>
+    <td class="tg-0pky">Thu 5:15p - 6:30p</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky">Lab 04</td>
+    <td class="tg-0pky">Asynchronous</td>
+  </tr>
+</tbody>
+</table>
+</div>
+
+        </div>
+      </div>
+      <div class="blurb">
+        
+
+
+
+
+<div class="event">
+  <div class="eventTitle"><a href="/help/"><i class="far fa-lightbulb"></i>&nbsp;&nbsp;Sticky 3</a></div>
+  <div class="eventDetails">This is where you can get help!</div>
 </div>
 
 
+
+        
+
+
+
+
+<div class="event">
+  <div class="eventTitle"><a href="https://sakai.duke.edu"><i class="far fa-laptop"></i>&nbsp;&nbsp;Join on Zoom!</a></div>
+  <div class="eventDetails">Join all live lectures, labs, and office hours using the Zoom links in <a href="https://sakai.duke.edu">Sakai</a>.</div>
+</div>
+
+
+
+      </div>
+    </div> 
+  </div> 
+
+
+</div> 
 
 
 
