--- a/public/index.html
+++ b/public/index.html
@@ -297,8 +297,8 @@ table tbody tr:nth-child(odd){
 
 
 <div class="event">
-  <div class="eventTitle"><a href="/schedule/"><i class="fas fa-flag-checkered"></i>&nbsp;&nbsp;Sticky 1</a></div>
-  <div class="eventDetails">These is the course schedule! whoo!</div>
+  <div class="eventTitle"><a href="https://sakai.duke.edu"><i class="fas fa-laptop"></i>&nbsp;&nbsp;Join on Zoom!</a></div>
+  <div class="eventDetails">Join live lectures, labs, and office hours using the Zoom links in <a href="https://sakai.duke.edu">Sakai</a>.</div>
 </div>
 
 
@@ -309,8 +309,8 @@ table tbody tr:nth-child(odd){
 
 
 <div class="event">
-  <div class="eventTitle"><a href="/schedule/"><i class="fas fa-flag-checkered"></i>&nbsp;&nbsp;Sticky 2</a></div>
-  <div class="eventDetails">These is the course schedule! whoo!</div>
+  <div class="eventTitle"><a href="/schedule/"><i class="fas fa-calendar-check"></i>&nbsp;&nbsp;Find out what&#39;s happening!</a></div>
+  <div class="eventDetails">Click on the <a href="/schedule/">schedule</a> tab to keep up with all activities and assignments.</div>
 </div>
 
 
@@ -385,24 +385,15 @@ table tbody tr:nth-child(odd){
 
 
 <div class="event">
-  <div class="eventTitle"><a href="/help/"><i class="far fa-lightbulb"></i>&nbsp;&nbsp;Sticky 3</a></div>
-  <div class="eventDetails">This is where you can get help!</div>
+  <div class="eventTitle"><a href="/help/"><i class="fas fa-question-circle"></i>&nbsp;&nbsp;Where to find help!</a></div>
+  <div class="eventDetails"><p><strong>Office hours</strong> are a time for you to meet with a member of the teaching team to ask questions about content, assignments, or anything else related to the course. Join using the Zoom link in <a href="https://sakai.duke.edu">Sakai</a>.</p>
+<p>Click on the <a href="/help/">Help</a> tab for more information about other resources and ways to ask questions outside of office hours.</p>
+</div>
 </div>
 
 
 
-        
-
-
-
-
-<div class="event">
-  <div class="eventTitle"><a href="https://sakai.duke.edu"><i class="far fa-laptop"></i>&nbsp;&nbsp;Join on Zoom!</a></div>
-  <div class="eventDetails">Join all live lectures, labs, and office hours using the Zoom links in <a href="https://sakai.duke.edu">Sakai</a>.</div>
-</div>
-
-
-
+      
       </div>
     </div> 
   </div> 
