formatting on front page.

--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@ table tbody tr:nth-child(odd){
 
       <div class="blurb">
         <div class="tagline">
-          Regression Analysis
+          STA 210: Regression Analysis
           </div>
         <div>
           Learn approaches for analyzing multivariate data sets, emphasizing analysis of variance, linear regression, and logistic regression. Learn techniques for checking the appropriateness of proposed models, such as residual analyses and case influence diagnostics, and techniques for selecting models. Gain experience dealing with the challenges that arise in practice through assignments that utilize real-world data. This class emphasizes data analysis over mathematical theory.
@@ -386,7 +386,7 @@ table tbody tr:nth-child(odd){
 
 <div class="event">
   <div class="eventTitle"><a href="/help/"><i class="fas fa-question-circle"></i>&nbsp;&nbsp;Where to find help!</a></div>
-  <div class="eventDetails"><p><strong>Office hours</strong> are a time for you to meet with a member of the teaching team to ask questions about content, assignments, or anything else related to the course. Join using the Zoom link in <a href="https://sakai.duke.edu">Sakai</a>.</p>
+  <div class="eventDetails"><p>Office hours are a time for you to meet with a member of the teaching team to ask questions about content, assignments, or anything else related to the course. Join using the Zoom link in <a href="https://sakai.duke.edu">Sakai</a>.</p>
 <p>Click on the <a href="/help/">Help</a> tab for more information about other resources and ways to ask questions outside of office hours.</p>
 </div>
 </div>
