figure out formatting

--- a/public/index.html
+++ b/public/index.html
@@ -344,37 +344,47 @@ table tbody tr:nth-child(odd){
   }
   
 </style>
-<div class = "column">
 <table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
 <tbody>
-  <tr>
-    <td class="tg-0pky">Lecture</td>
-    <td class="tg-0pky">All Students</td>
-    <td class="tg-0pky">Mon and Wed 3:30p - 4:45p</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky">Labs</td>
-    <td class="tg-0pky">Lab 01</td>
-    <td class="tg-0pky">Thu 8:30a - 9:45a</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky">Lab 02</td>
-    <td class="tg-0pky">Thu 12p - 1:15p</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky">Lab 03</td>
-    <td class="tg-0pky">Thu 5:15p - 6:30p</td>
-  </tr>
-  <tr>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky">Lab 04</td>
-    <td class="tg-0pky">Asynchronous</td>
-  </tr>
+<tr>
+<td>Instructor</td>
+<td><a href="mailto:maria.tackett@duke.edu">Prof. Maria Tackett</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td>Betsy Bersson</td>
+<td>Mon 8a - 10a</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:meredith.brown@duke.edu">Meredith Brown</a></td>
+<td>Tue 12p - 2p</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:cody.coombs@duke.edu">Cody Coombs</a></td>
+<td>Mon 11:30a - 1:30p</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:sophia.dalldorf@duke.edu">Sophie Dalldorf</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
+<td><a href="mailto:emily.tallman@duke.edu">Emily Tallman</a></td>
+<td>Tue 3:30p - 5:30p</td>
+</tr>
 </tbody>
 </table>
-</div>
 
         </div>
       </div>
