add email address

--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -253,7 +253,7 @@ table tbody tr:nth-child(odd){
 </tr>
 <tr>
 <td>TA</td>
-<td>Betsy Bersson</td>
+<td><a href="mailto:elb75@duke.edu">Betsy Bersson</a></td>
 <td>Mon 8a - 10a</td>
 </tr>
 <tr>
