--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -330,7 +330,7 @@ table tbody tr:nth-child(odd){
 <p><em>To accommodate unexpected events, the lowest homework grade will be dropped at the end of the semester.</em></p>
 <h3 id="quizzes">Quizzes</h3>
 <p>There will be four quizzes during the semester. The quizzes are an opportunity to assess the knowledge and skills you’ve learned. They will include both the conceptual and mathematical and conceptual aspects of regression. Quizzes will be timed and must be completed during the time period specified.</p>
-<p><strong>Quiz dates cannot be changed and no make-up quizzes will be given.</strong> If extentuating circumstances prohibit you from taking a quiz, please let Professor Tackett know before the start of the quiz.</p>
+<p><strong>Quiz dates cannot be changed and no make-up quizzes will be given.</strong> If extenuating circumstances prohibit you from taking a quiz, please let Professor Tackett know before the start of the quiz.</p>
 <h3 id="final-project">Final Project</h3>
 <p>The purpose of the project is to apply what you’ve learned throughout the semester to analyze an interesting data-based research question using regression. The project will be completed with your lab teams, and each team will present their work in video and in writing during the final exam period. More information about the project will be provided a few weeks into the semester.</p>
 <p>The participation of the course grade will be based primarily on individual Application Exercises (AEs), which give you an opportunity to practice using the statistical concepts and/or code discussed in lecture on short data analyses. AEs will be linked in lecture slides and time will be set aside during the optional live sessions to work on them. These AEs are due by the end of the next day; for instance, an AE associated with a lecture on Monday will be due Tuesday at 11:59p. AEs will be graded based on a good-faith effort has been made in attempting all parts. Successful on-time completion of at least 90% of AEs will result in full points for AEs; anything lower than that will be assigned points accordingly.</p>
@@ -339,7 +339,7 @@ table tbody tr:nth-child(odd){
 <h3 id="statistics-experiences">Statistics Experiences</h3>
 <p>During the course of the semester, there will be periodic opportunities for you to experience statistics and data science outside of the classroom. The goal of these experiences are for you to think about how the material you&rsquo;re learning in the course can connect with your experiences and society at large.</p>
 <h2 id="grading">Grading</h2>
-<p>The final cousre grade will be calculated as follows:</p>
+<p>The final course grade will be calculated as follows:</p>
 <center>
 <table>
 <thead>
