update table size

--- a/public/index.html
+++ b/public/index.html
@@ -250,10 +250,13 @@ table tbody tr:nth-child(odd){
   }
 
   table {
-  width: 100%;
-  font-size: 20px;
+  width: 500px;
+  font-size: 17px;
   font-weight: 400;
+  padding-top: 5px;
+  padding-bottom: 5px;
   }
+  
   
 </style>
 <div class = "column">
@@ -337,11 +340,13 @@ table tbody tr:nth-child(odd){
   }
 
   table {
-  width: 100%;
-  font-size: 20px;
+  width: 500px;
+  font-size: 17px;
   font-weight: 400;
-  
+  padding-top: 5px;
+  padding-bottom: 5px;
   }
+  
   
 </style>
 <table>
