--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -486,7 +486,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Aug 26</td>
-            <td style="width:40%;text-align:left">Inference for SLR</td>
+            <td style="width:40%;text-align:left">SLR: Inference</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -544,7 +544,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 03</td>
             <td align="right" style="width:25%;text-align:right">Mon, Aug 31</td>
-            <td style="width:40%;text-align:left">Partitioning variability</td>
+            <td style="width:40%;text-align:left">SLR: Partitioning variability</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -573,7 +573,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 02</td>
-            <td style="width:40%;text-align:left">SLR: prediction + conditions</td>
+            <td style="width:40%;text-align:left">SLR: Prediction + conditions</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -805,7 +805,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 06</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 21</td>
-            <td style="width:40%;text-align:left">MLR: transformations</td>
+            <td style="width:40%;text-align:left">MLR: Transformations</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -892,7 +892,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 07</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 28</td>
-            <td style="width:40%;text-align:left">MLR: Model diagnostics</td>
+            <td style="width:40%;text-align:left">MLR: Model selection</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -921,7 +921,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 30</td>
-            <td style="width:40%;text-align:left">MLR: Model selection</td>
+            <td style="width:40%;text-align:left">MLR: Model diagnostics</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1008,7 +1008,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 08</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 05</td>
-            <td style="width:40%;text-align:left">Odds + odds ratio</td>
+            <td style="width:40%;text-align:left">TBD</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1037,7 +1037,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 07</td>
-            <td style="width:40%;text-align:left">Logistic regression</td>
+            <td style="width:40%;text-align:left">Odds + odds ratio</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1095,7 +1095,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 09</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 12</td>
-            <td style="width:40%;text-align:left">Logistic: predictions + conditions</td>
+            <td style="width:40%;text-align:left">Logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1124,7 +1124,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 14</td>
-            <td style="width:40%;text-align:left">Logistic: inference</td>
+            <td style="width:40%;text-align:left">Logistic: predictions + conditions</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1182,7 +1182,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 10</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 19</td>
-            <td style="width:40%;text-align:left">Multinomial logistic regression</td>
+            <td style="width:40%;text-align:left">Logistic: inference</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1269,7 +1269,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 11</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 26</td>
-            <td style="width:40%;text-align:left">Unit 02 review</td>
+            <td style="width:40%;text-align:left">Multinomial logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1530,7 +1530,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Nov 12</td>
-            <td style="width:40%;text-align:left">Lab 08: Logistic regression</td>
+            <td style="width:40%;text-align:left">Lab 13</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
