--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -499,10 +499,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -586,10 +584,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -760,10 +756,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -847,10 +841,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -1050,10 +1042,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
@@ -1137,10 +1127,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/assignment//">
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-check-square fa-lg"></i></font>
