--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -702,10 +702,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-01.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-file-powerpoint fa-lg"></i></font>
@@ -959,10 +957,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-02.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-file-powerpoint fa-lg"></i></font>
@@ -1245,10 +1241,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-03.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-file-powerpoint fa-lg"></i></font>
@@ -1448,10 +1442,8 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-04.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-file-powerpoint fa-lg"></i></font>
