update schedule note

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -325,7 +325,8 @@ table tbody tr:nth-child(odd){
       <div class="column75">
         <div class="article-title"></div>
         <div class="article-content">
-        <p><strong>Note</strong>: This schedule may be updated as the semester progresses, with all changes documented here. Due dates for the quizzes will not be changed.</p>
+        <p><strong>Note</strong>: This page shows an overview of the topics and assignments in this course. Click on the tab for each week to see a detailed view of the readings, videos, slides, and other information.</p>
+<p><em>This schedule may be updated as the semester progresses, with all changes documented here. Dates for the quizzes will not be changed.</em></p>
 <table class="table schedule" style="max-width:100%">
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
