update office hours

--- a/public/index.html
+++ b/public/index.html
@@ -387,7 +387,7 @@ table tbody tr:nth-child(odd){
 <tr>
 <td>TA</td>
 <td><a href="mailto:sophia.dalldorf@duke.edu">Sophie Dalldorf</a></td>
-<td>TBD</td>
+<td>Thu 10a - 12p</td>
 </tr>
 <tr>
 <td>TA</td>
