--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -230,7 +230,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Syllabus</h1>
 
       <div class="article-content">
-      <p><strong><a href="syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
+      <p><strong><a href="https://sta210-fa20.netlify.app/syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
 <h1 id="course-learning-objectives">Course Learning Objectives</h1>
 <p>By the end of the semester, you will…</p>
 <ul>
