--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -231,7 +231,7 @@ table tbody tr:nth-child(odd){
 
       <div class="article-content">
       <p><strong><a href="https://sta210-fa20.netlify.app/syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
-<h1 id="course-learning-objectives">Course Learning Objectives</h1>
+<h2 id="course-learning-objectives">Course Learning Objectives</h2>
 <p>By the end of the semester, you will…</p>
 <ul>
 <li>know methods for analyzing multivariate datasets, with an emphasis on interpretation</li>
@@ -476,7 +476,7 @@ table tbody tr:nth-child(odd){
           <div class="sectionTitle">Contents</div>
           <nav id="TableOfContents">
   <ul>
-    <li></li>
+    <li><a href="#course-learning-objectives">Course Learning Objectives</a></li>
     <li><a href="#activities--assessment">Activities &amp; Assessment</a></li>
     <li><a href="#grading">Grading</a></li>
     <li><a href="#additional-resources">Additional resources</a></li>
