--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -231,7 +231,7 @@ table tbody tr:nth-child(odd){
 
       <div class="article-content">
       <p><strong><a href="https://sta210-fa20.netlify.app/syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
-<h2 id="course-learning-objectives">Course Learning Objectives</h2>
+<h2 id="course-learning-objectives">Course learning objectives</h2>
 <p>By the end of the semester, you will…</p>
 <ul>
 <li>know methods for analyzing multivariate datasets, with an emphasis on interpretation</li>
@@ -240,6 +240,7 @@ table tbody tr:nth-child(odd){
 <li>develop proficiency in computing tools used to conduct reproducible statistical analyses, specifically R and Git</li>
 <li>understand the process of data-based research by working on an independent research project</li>
 </ul>
+<h2 id="course-community">Course community</h2>
 <h3 id="duke-community-standard">Duke Community Standard</h3>
 <p>As a student in this course, you have agreed to uphold the <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> as well as the practices specific to this course.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_KN97j30ST4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -476,7 +477,8 @@ table tbody tr:nth-child(odd){
           <div class="sectionTitle">Contents</div>
           <nav id="TableOfContents">
   <ul>
-    <li><a href="#course-learning-objectives">Course Learning Objectives</a></li>
+    <li><a href="#course-learning-objectives">Course learning objectives</a></li>
+    <li><a href="#course-community">Course community</a></li>
     <li><a href="#activities--assessment">Activities &amp; Assessment</a></li>
     <li><a href="#grading">Grading</a></li>
     <li><a href="#additional-resources">Additional resources</a></li>
