--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -362,18 +362,23 @@ font-size: 18px;
 <tbody>
 <tr>
 <td>Monday</td>
-<td><a href="https://sta199-fa20-002.netlify.app/slides/01-intro.html#1">Welcome to STA 199!</a></td>
-<td><a href="https://warpwire.duke.edu/w/qx4EAA/">Welcome to STA 199!</a></td>
+<td><a href="https://sta210-fa20.netlify.app/slides/01-welcome.html#1">Welcome to STA 210!</a></td>
+<td><a href="">Welcome to STA 210!</a></td>
 </tr>
 <tr>
 <td></td>
 <td></td>
-<td><a href="https://warpwire.duke.edu/w/PR4EAA/">Tour of website + Sakai</a></td>
+<td><a href="">Tour of website + Sakai</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
-<td><a href="https://sta199-fa20-002.netlify.app/slides/02-meet-toolkit.html">Meet the Toolkit</a></td>
-<td>R + RStudio Demo</td>
+<td><a href="">Data anlaysis + modeling</a></td>
+<td>Data analysis</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td>RMarkdown + Git</td>
 </tr>
 </tbody>
 </table>
@@ -387,11 +392,11 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td><a href="https://socviz.co/appendix.html#a-little-more-about-r">How to read an R help page</a></td>
+<td><a href="https://arxiv.org/pdf/1903.07639.pdf">Elements and Principles for Characterizing Variation between Data Analyses</a></td>
 <td><strong>Required</strong></td>
 </tr>
 <tr>
-<td><a href="https://sta199-fa20-002.netlify.app/readings/flint_water_story.pdf">The murky tale of Flint&rsquo;s deceptive water data</a></td>
+<td><a href="https://socviz.co/appendix.html#a-little-more-about-r">How to read an R help page</a></td>
 <td><strong>Required</strong></td>
 </tr>
 <tr>
@@ -414,7 +419,7 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td><a href="https://forms.gle/evRuoBinXY9mJ6ge8">Submit GitHub username</a></td>
+<td><a href="https://forms.gle/NQdtNt82r8p2zFwC9">Submit GitHub username</a></td>
 <td><strong>due Wed, Aug 19 at 11:59p</strong></td>
 </tr>
 <tr>
@@ -426,7 +431,7 @@ font-size: 18px;
 <td><strong>due Wed, Aug 26 at 11:59p</strong></td>
 </tr>
 <tr>
-<td>Read <a href="https://sta199-fa20-002.netlify.app/syllabus/">syllabus</a></td>
+<td>Read <a href="https://sta210-fa20.netlify.app/syllabus/">syllabus</a></td>
 <td></td>
 </tr>
 </tbody>
