--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -363,16 +363,16 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/01-welcome.html#1">Welcome to STA 210!</a></td>
-<td><a href="">Welcome to STA 210!</a></td>
+<td>Welcome to STA 210!</td>
 </tr>
 <tr>
 <td></td>
 <td></td>
-<td><a href="">Tour of website + Sakai</a></td>
+<td><a href="https://warpwire.duke.edu/w/8R4EAA/">Tour of website + Sakai</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
-<td><a href="">Data anlaysis + modeling</a></td>
+<td>Data anlaysis + modeling]</td>
 <td>Data analysis</td>
 </tr>
 <tr>
